--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,3 +51,24 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 123456
       POSTGRES_DB: orders
+
+  #=================
+  # Payments Microservice
+  #=================
+
+  payments-ms:
+    container_name: payments_ms
+    build: ./payments-ms
+    ports:
+      - ${PAYMENTS_MICROSERVICE_PORT}:3003
+    volumes:
+      - ./payments-ms/src:/usr/src/app/src
+    command: npm run start:dev
+    environment:
+      - PORT=3003
+      - NATS_SERVERS=nats://nats-server:4222
+      - PAYMENTS_MICROSERVICE_PORT=${PAYMENTS_MICROSERVICE_PORT}
+      - STRIPE_SECRET=${STRIPE_SECRET}
+      - STRIPE_SUCCESS_URL=${STRIPE_SUCCESS_URL}
+      - STRIPE_CANCEL_URL=${STRIPE_CANCEL_URL}
+      - STRIPE_ENDPOINT_SECRET=${STRIPE_ENDPOINT_SECRET}
