--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,58 +17,88 @@ services:
       - PORT=3000
       - NATS_SERVERS=nats://nats-server:4222
 
-  products-ms:
-    build: ./products-ms
-    volumes:
-      - ./products-ms/src:/usr/src/app/src
-    command: npm run start:dev
-    environment:
-      - PORT=3001
-      - NATS_SERVERS=nats://nats-server:4222
-      - DATABASE_URL=file:./dev.db
+  #=================
+  # auth Microservice
+  #=================
 
-  orders-ms:
+  auth-ms:
+    container_name: auth_ms
     depends_on:
-      - orders-bd
-    build: ./orders-ms
+      - auth-bd
+    build: ./auth-ms
     volumes:
-      - ./orders-ms/src:/usr/src/app/src
+      - ./auth-ms/src:/usr/src/app/src
     command: npm run start:dev
     environment:
-      - PORT=3002
+      - PORT=3004
       - NATS_SERVERS=nats://nats-server:4222
-      - DATABASE_URL=postgresql://postgres:123456@orders-bd:5432/orders?schema=public
+      - DATABASE_URL=${AUTH_DATABASE_URL}
+      - JWT_SECRET=${JWT_SECRET}
 
-  orders-bd:
-    container_name: orders_database
+  auth-bd:
     image: postgres:16.2
     restart: always
     volumes:
-      - ./orders-ms/postgres:/var/lib/postgresql/data
+      - ./auth-ms/postgres:/var/lib/postgresql/data
     ports:
-      - "5432:5432"
+      - 5432:5432
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: 123456
-      POSTGRES_DB: orders
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=123456
+      - POSTGRES_DB=auth
 
-  #=================
-  # Payments Microservice
-  #=================
+  # products-ms:
+  #   build: ./products-ms
+  #   volumes:
+  #     - ./products-ms/src:/usr/src/app/src
+  #   command: npm run start:dev
+  #   environment:
+  #     - PORT=3001
+  #     - NATS_SERVERS=nats://nats-server:4222
+  #     - DATABASE_URL=file:./dev.db
 
-  payments-ms:
-    container_name: payments_ms
-    build: ./payments-ms
-    ports:
-      - ${PAYMENTS_MICROSERVICE_PORT}:3003
-    volumes:
-      - ./payments-ms/src:/usr/src/app/src
-    command: npm run start:dev
-    environment:
-      - PORT=3003
-      - NATS_SERVERS=nats://nats-server:4222
-      - PAYMENTS_MICROSERVICE_PORT=${PAYMENTS_MICROSERVICE_PORT}
-      - STRIPE_SECRET=${STRIPE_SECRET}
-      - STRIPE_SUCCESS_URL=${STRIPE_SUCCESS_URL}
-      - STRIPE_CANCEL_URL=${STRIPE_CANCEL_URL}
-      - STRIPE_ENDPOINT_SECRET=${STRIPE_ENDPOINT_SECRET}
+  # orders-ms:
+  #   depends_on:
+  #     - orders-bd
+  #   build: ./orders-ms
+  #   volumes:
+  #     - ./orders-ms/src:/usr/src/app/src
+  #   command: npm run start:dev
+  #   environment:
+  #     - PORT=3002
+  #     - NATS_SERVERS=nats://nats-server:4222
+  #     - DATABASE_URL=postgresql://postgres:123456@orders-bd:5432/orders?schema=public
+
+  # orders-bd:
+  #   container_name: orders_database
+  #   image: postgres:16.2
+  #   restart: always
+  #   volumes:
+  #     - ./orders-ms/postgres:/var/lib/postgresql/data
+  #   ports:
+  #     - "5432:5432"
+  #   environment:
+  #     POSTGRES_USER: postgres
+  #     POSTGRES_PASSWORD: 123456
+  #     POSTGRES_DB: orders
+
+  # #=================
+  # # Payments Microservice
+  # #=================
+
+  # payments-ms:
+  #   container_name: payments_ms
+  #   build: ./payments-ms
+  #   ports:
+  #     - ${PAYMENTS_MICROSERVICE_PORT}:3003
+  #   volumes:
+  #     - ./payments-ms/src:/usr/src/app/src
+  #   command: npm run start:dev
+  #   environment:
+  #     - PORT=3003
+  #     - NATS_SERVERS=nats://nats-server:4222
+  #     - PAYMENTS_MICROSERVICE_PORT=${PAYMENTS_MICROSERVICE_PORT}
+  #     - STRIPE_SECRET=${STRIPE_SECRET}
+  #     - STRIPE_SUCCESS_URL=${STRIPE_SUCCESS_URL}
+  #     - STRIPE_CANCEL_URL=${STRIPE_CANCEL_URL}
+  #     - STRIPE_ENDPOINT_SECRET=${STRIPE_ENDPOINT_SECRET}
